Revise subtitle for improved user instructions
Updated the subtitle text for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <h1>Humanistica Digitalia — LSJ (grc)</h1>
   <p class="subtitle">
-    Πληκτρολόγησε αρχαία ελληνική λέξη και άνοιξε το λήμμα σε περιβάλλον με κείμενο (Logeion, με LSJ).
+    Πληκτρολόγησε μια αρχαία ελληνική λέξη και άνοιξε το αντίστοιχο λήμμα στο Logeion (με προβολή του οικείου λήμματος από το LSJ και άλλα λεξικά).»
   </p>
 
   <div class="search-box">
