--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <h1>Humanistica Digitalia — LSJ (grc)</h1>
   <p class="subtitle">
-    Πληκτρολόγησε μια αρχαία ελληνική λέξη και άνοιξε το αντίστοιχο λήμμα στο Logeion (με προβολή του οικείου λήμματος από το LSJ και άλλα λεξικά).»
+    Πληκτρολόγησε μια αρχαία ελληνική λέξη ή λατινική λέξη και άνοιξε το αντίστοιχο λήμμα στο Logeion (με προβολή του οικείου λήμματος των λεξικών H.G. Liddell and R. Scott Greek-English Lexicon (9th ed. 1940) Lewis and Short's Latin-English Lexicon (1879) κ.ά.).»
   </p>
 
   <div class="search-box">
